# habistat

./: .cursorignore  .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .mcp.json  .prettierignore  .prettierrc  .vercelignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  biome.json  components.json  drizzle.config.ts  eslint.config.js  figma-plan.md  file-structure.txt  guidelines.md  implementation-plan-1.md  implementation-plan-2.md  implementation-plan.md  initial-implementation-plan.md  llms-drizzle.txt  llms-mcp-full.txt  package.json  plan.md  pnpm-lock.yaml  production-init.sql  saas.md  streak-calendar-digest.txt  suggestions.md  svelte.config.js  tailwind.config.js  tech-stack.md  tsconfig.json  vercel.json  (+1 more)
.cargo/: config.toml
.claude/: settings.local.json
.cursor/: environment.json
Docs/: add-comments.md  authentication-fix-guide.md  clerk-setup.md  contribution-guide.md  convex-auth-testing-guide.md  guidebook.md  implementation-plan.md  llms-small-svelte.txt  plan.md  project-structure.md  rules.md  sample-data.md  tech-stack.md  user-sync-implementation.md
PRPs/: SV-create-base-prp.md  SV-execute-base-prp.md  SV-review-general.md  SV-review-staged-unstaged.md  phase3-saas-subscription-management.md  prp-svelte.md
backups/: habistat-backup-2025-08-07T01-32-46-851Z.db  habistat-backup-2025-08-07T02-42-01-087Z.db
convex/: http.ts  schema.ts  users.ts
migrations/: 0000_flimsy_zombie.sql  (+4 more)
src-tauri/: .gitignore  Cargo.toml  GEMINI.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+453 files in other folders)
